crates/toml/tests/snapshots/invalid/float/exp-double-e-02.stderr
TOML parse error at line 1, column 22
  |
1 | exp-double-e-02 = 1e2e3
  |                      ^^
invalid float, expected nothing
